tests/tests/ui/index_on_data_enum.stderr
error[E0277]: field type `Contact` cannot be used in an index
  --> tests/ui/index_on_data_enum.rs:21:14
   |
21 |     contact: Contact,
   |              ^^^^^^^ not indexable
   |
help: the trait `toasty::codegen_support::index::IndexableField` is not implemented for `Contact`
  --> tests/ui/index_on_data_enum.rs:7:1
   |
 7 | enum Contact {
   | ^^^^^^^^^^^^
   = note: only scalar fields, newtype embeds, and unit (data-less) enums can be indexed; data-carrying enums and multi-field embedded structs span multiple columns and have no single index column
   = help: the following other types implement trait `toasty::codegen_support::index::IndexableField`:
             Arc<T>
             Box<T>
             Deferred<T>
             Option<T>
             Rc<T>
             Vec<u8>
             bigdecimal::BigDecimal
             bool
           and $N others
note: required by a bound in `_check`
  --> tests/ui/index_on_data_enum.rs:14:17
   |
14 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `_check`
...
21 |     contact: Contact,
   |              ------- required by a bound in this function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
